--- a/package.json
+++ b/package.json
@@ -16,10 +16,14 @@
     "@emotion/styled": "^11.14.0",
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
+    "axios": "^1.11.0",
+    "body-parser": "^1.20.2",
+    "compression": "^1.8.1",
     "html2canvas": "^1.4.1",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
-    "serve": "^14.2.4"
+    "serve": "^14.2.4",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.21.0",
